--- a/app/src/main/res/layout/fresco_list_base.xml
+++ b/app/src/main/res/layout/fresco_list_base.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,10 +29,10 @@
                 android:text="hogehogehoge" />
 
         </LinearLayout>
-        <ImageView
-            android:id="@+id/imageThumbnail"
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/frescoImageThumbnail"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@mipmap/ic_launcher"  />
+            fresco:placeholderImage="@mipmap/ic_launcher"  />
     </LinearLayout>
 </LinearLayout>
